--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,7 @@ A two DOF automatic levelling wrist was developed by Dylan J. A. Brenneis in 201
 \caption{\label{fig:auto_levelling}Automatic levelling of the flexion. The angle, $\theta$, of the flexion servo is constant with the ground as the arm moves (represented by the green dashed line) \cite{d.j.a.brenneis}.}
 \end{figure}
 
-Figure \ref{fig:slw_diagram} shows the design of the automatic levelling wrist. It should be noted that the automatic levelling wrist is designed as a bypass protheses so that an able-bodied person is able to use it. A higher statistical power is able to be achieved in a more time efficient way by running trials with able-bodied persons, because of limitations in participant availability when running trials with participants affected by amputation \cite{d.j.a.brenneis}.
+Figure \ref{fig:slw_diagram} shows the design of the automatic levelling wrist. Three MX-28AT servos are used to actuate the prosthetic wrist. Two servos provide the degrees of freedom for wrist rotation and flexion, and the third servo is used to manipulate a gripper. It should be noted that the automatic levelling wrist is designed as a bypass protheses so that an able-bodied person is able to use it. A higher statistical power is able to be achieved in a more time efficient way by running trials with able-bodied persons, because of limitations in participant availability when running trials with participants affected by amputation \cite{d.j.a.brenneis}.
 
 \begin{figure}[H]
 \centering \includegraphics[width=0.8\columnwidth]{slw_diagram.png}
@@ -165,7 +165,7 @@ The wrist is automatically leveled using an Adafruit 9-DOF absolute orientation 
 
 $\phi$ is defined as the angle between the negative y-axis and the projection of the gravity vector in the x-y plane. $\theta$ is defined as the angle between the positive z-axis and the projection of the gravity vector projected in the y-z plane.
 
-Figure \ref{fig:servo_system} shows the block diagram for one servo in the automatic levelling wrist. A simple PID control loop controls the position of the servo. The equation for the PID controller signal, $u(t)$, is given by equation \ref{eq:pid}. The servo position is summed with a disturbance and fed through the IMU to acquire either $\phi$ or $\theta$. The block diagram for the rotation and flexion servos are the same other than the $K_p$, $K_i$, and $K_d$ gain values for the PID controllers, the IMU function, and the value of the disturbance, $d(t)$. The disturbance is considered as the angle of the user's wrist with respect to a fixed coordinate system that is coincident with the user's wrist when it is completely level with the ground. Note that in the actual implementation of the control loop, the disturbance and servo position aren't directly used. Rather, they are implicitly included when the IMU measures the gravity vector since the gravity vector changes based on the disturbance and servo positions.
+Figure \ref{fig:servo_system} shows the block diagram for one servo in the automatic levelling wrist. A simple PID control loop controls the position of the servo. The equation for the PID controller signal, $u(t)$, is given by equation \ref{eq:pid}. The servo position is summed with a disturbance, $d(t)$ which models the angle the wrist is rotated by the user, and fed through the IMU to acquire either $\phi$ or $\theta$. The block diagram for the rotation and flexion servos are the same other than the $K_p$, $K_i$, and $K_d$ gain values for the PID controllers, the IMU function, and the value of the disturbance, $d(t)$. The disturbance is considered as the angle of the user's wrist with respect to a fixed coordinate system that is coincident with the user's wrist when it is completely level with the ground. Note that in the actual implementation of the control loop, the disturbance and servo position aren't directly used. Rather, they are implicitly included when the IMU measures the gravity vector since the gravity vector changes based on the disturbance and servo positions.
 
 \begin{equation}
 	\label{eq:pid}
@@ -213,17 +213,17 @@ For a system, $y(\bf{u_i}, w)$ with one output, an input vector, $\bf{u_i}$, $n$
 \begin{equation}
 	\label{eq:jacobian}
 	J_w = \begin{bmatrix}
-		\frac{\di y(\bf{u_0}, \bf{w})}{\di w_0} & \frac{\di y(\bf{u_0}, \bf{w})}{\di w_1} & ... & \frac{\di y(\bf{u_0}, \bf{w})}{\di w_k} \\
-		\frac{\di y(\bf{u_1}, \bf{w})}{\di w_0} & \frac{\di y(\bf{u_1}, \bf{w})}{\di w_1} & ... & \frac{\di y(\bf{u_1}, \bf{w})}{\di w_k} \\
-		... & ... & ... & ... \\
-		\frac{\di y(\bf{u_n}, \bf{w})}{\di w_0} & \frac{\di y(\bf{u_n}, \bf{w})}{\di w_1} & ... & \frac{\di y(\bf{u_n}, \bf{w})}{\di w_k}
+		\frac{\di y(\bf{u_0}, \bf{w})}{\di w_0} & \frac{\di y(\bf{u_0}, \bf{w})}{\di w_1} & \cdots & \frac{\di y(\bf{u_0}, \bf{w})}{\di w_k} \\
+		\frac{\di y(\bf{u_1}, \bf{w})}{\di w_0} & \frac{\di y(\bf{u_1}, \bf{w})}{\di w_1} & \cdots & \frac{\di y(\bf{u_1}, \bf{w})}{\di w_k} \\
+		\vdots & \vdots & \ddots & \vdots \\
+		\frac{\di y(\bf{u_n}, \bf{w})}{\di w_0} & \frac{\di y(\bf{u_n}, \bf{w})}{\di w_1} & \cdots & \frac{\di y(\bf{u_n}, \bf{w})}{\di w_k}
 
 
 	\end{bmatrix}
 \end{equation}
 
 \subsubsection{Numerically Calculating the Jacobian of the Servo}\label{sec:numerical_jacobian}
-To numerically calculate jacobian of a servo, each weight is individually changed by a small amount, $\epsilon$ and then an input signal is sent to the servo. The change in servo response before and after the small weight change is recorded and used to calculate a finite backward difference to approximate the partial derivative of the system with respect to the weight that was changed. Equation \ref{eq:jacobian_numerical_calc} shows the calculation of the approximate jacobian matrix.
+To numerically calculate jacobian of a servo, each weight is individually changed by a small amount, $\epsilon$ and then an input signal is sent to the servo. The change in servo response before and after the small weight change is recorded and used to calculate a finite backward difference to approximate the partial derivative of the system with respect to the weight that was changed. Equation \ref{eq:jacobian_numerical_calc} demonstrates this calculation of the approximate jacobian matrix. The dimension of the resultant jacobian matrix is $n$ rows by $k$ columns.
 
 \begin{equation}
 \begin{split}
@@ -233,54 +233,52 @@ To numerically calculate jacobian of a servo, each weight is individually change
 	\end{bmatrix} \\
 	& \frac{\di \bf{y}(\bf{u}, \bf{w})}{\di w_i} = \frac{\bf{y}(\bf{u}, \bf{w}) - \bf{y}(\bf{u}, \bf{w} - \bf{h}\epsilon(w_i))}{\epsilon(w_i)} \\
 	& h_p = 1, p = i \\
-	& h_p = 0, p =/= i
+	& h_p = 0, p \neq i
 \end{split}
 \end{equation}
 
-The dimension of the resultant jacobian matrix is $n$ rows by $k$ columns.
-
-\subsection{Reinforcement Learning Background}
-Reinforcement learning is a machine learning method based on an agent interacting with its environment. The agent takes actions within the environment, which leads to a new state within the environment and a reward for the action. Figure \ref{fig:rl_diagram} describes the interaction between the agent and the environment it exists in.
-The goal of the agent is to maximize the expected, cumulant of discounted future rewards by taking the best action for the situation, or state, that the agent is in. Equation \ref{eq:rl_basic} formally shows what the agent is maximizing.
-
-\begin{equation}
-\begin{split}
-	\label{eq:rl_basic}
-	& R_t = \sum_{k=0}^{\infty}\gamma^kr_{t+k+1} \\
-	& r:S \times A \rightarrow R \\
-	& \pi: S \rightarrow A \\
-\end{split}
-\end{equation}
-
-$R_t$ is the cumulative reward at time step $t$. $r$ is the reward function that returns a scalar reward based on the action chosen by the agent from the set of possible actions $S$ and the state that the agent was in from the set of possible states $S$. $\pi$ is called the policy. The policy is the function that the agent uses to choose an action given a state. $\gamma$ is a scalar value $\gamma \epsilon[0, 1]$ that determines the "far-sightedness" of the agent. If $\gamma=0$ the agent will only see the reward from the next time step. As $\gamma -> 1$ the agent will look farther into the future.
-
-\begin{figure}[H]
-\centering \includegraphics[width=0.8\columnwidth]{rl_diagram.png}
-\caption{\label{fig:rl_diagram}Interaction between an agent and the environment it exists in \cite{r.s.sutton}.}
-\end{figure}
-
-\subsubsection{Q-Learning}
-Q-Learning involves learning an action-value function, $Q(S, A)$, which maps states and actions to a value $Q$. To learn the action-value function, an iterative update is used as shown in equation \ref{eq:q_update}
-
-\begin{equation}
-	\label{eq:q_update}
-	Q(s_t, a_t) = (1-\alpha_t) Q(s_t, a_t) + \alpha_t [R_{t+1} + \gamma max_a Q(s_{t+1}, a_{t+1})]
-\end{equation}
-
-At each time step the Q-value for the previous state-action pair, $s_t$ and $a_t$, is updated at a learning rate, $\alpha_t$, by the sum of the received reward, $R_t$, and the discounted Q-value of the next state, $s_{t+1}$, maximized by selecting action $a_{t+1}$. The simplest way to represent the action-value function is to tabulate the values, with each row representing a possible state, and each column representing a possible action. By initializing the table randomly and then letting the agent act according to its policy, $\pi$, the agent can learn the Q-values for each element of the table.
-
-A simple policy that can be used for Q-Learning is the $\epsilon$-greedy policy. With this policy, the agent will either take the action that maximizes its current action-value function, $Q_t$, given its current state, or take a random action from the set of possible actions. The possibility that the agent takes a random action is determined by a the value $\epsilon$, where $0<\epsilon<1$. A higher value of $\epsilon$ means the agent explores more, while a lower value of $\epsilon$ means the agent exploits its current knowledge more. If $\epsilon=0$ the agent will always try to maximize its current action-value function and will not try new actions, which could potentially result in higher rewards. If $\epsilon=1$ the agent will always act randomly, which is useless in most cases. There is always a trade-off between exploitation and exploration, but certain tricks can be used to maximize reward, such as decreasing the exploration rate, $\epsilon$, as time passes and the agent learns to take optimal actions.
-
-\subsubsection{Function Approximation}
-Although tabulated Q-Learning is simple, many problems cannot be described in a discrete way. Function approximation provides a way to model the action-values in a continuous state space using a learned function. Most commonly, the Q function is represented by a neural network that takes the state as its input, and outputs a vector of the action-values for each action in the discrete action space. The update function shown in equation \ref{eq:func_approx} is similar to the tabular case, but uses the difference between the current Q-value and the next reward plus the next Q-value as the error term in the backpropagation for the neural network.
-
-\begin{equation}
-\begin{split}
-	\label{eq:func_approx}
-	& E = [R_{t+1} + \gamma max_a Q(s_{t+1}, a_{t+1})] - Q(s_t,a_t) \\
-	& w_{i,j} \leftarrow w_{i,j} + \alpha_t \frac{\di E}{\di w_{i,j}}
-\end{split}
-\end{equation}
+% \subsection{Reinforcement Learning Background}
+% Reinforcement learning is a machine learning method based on an agent interacting with its environment. The agent takes actions within the environment, which leads to a new state within the environment and a reward for the action. Figure \ref{fig:rl_diagram} describes the interaction between the agent and the environment it exists in.
+% The goal of the agent is to maximize the expected, cumulant of discounted future rewards by taking the best action for the situation, or state, that the agent is in. Equation \ref{eq:rl_basic} formally shows what the agent is maximizing.
+%
+% \begin{equation}
+% \begin{split}
+% 	\label{eq:rl_basic}
+% 	& R_t = \sum_{k=0}^{\infty}\gamma^kr_{t+k+1} \\
+% 	& r:S \times A \rightarrow R \\
+% 	& \pi: S \rightarrow A \\
+% \end{split}
+% \end{equation}
+%
+% $R_t$ is the cumulative reward at time step $t$. $r$ is the reward function that returns a scalar reward based on the action chosen by the agent from the set of possible actions $S$ and the state that the agent was in from the set of possible states $S$. $\pi$ is called the policy. The policy is the function that the agent uses to choose an action given a state. $\gamma \epsilon[0, 1]$ is a scalar value that determines the "far-sightedness" of the agent. If $\gamma=0$ the agent will only see the reward from the next time step. As $\gamma \rightarrow 1$ the agent will look farther into the future.
+%
+% \begin{figure}[H]
+% \centering \includegraphics[width=0.8\columnwidth]{rl_diagram.png}
+% \caption{\label{fig:rl_diagram}Interaction between an agent and the environment it exists in \cite{r.s.sutton}.}
+% \end{figure}
+%
+% \subsubsection{Q-Learning}
+% Q-Learning involves learning an action-value function, $Q(S, A)$, which maps states and actions to a value $Q$. To learn the action-value function, an iterative update is used as shown in equation \ref{eq:q_update}
+%
+% \begin{equation}
+% 	\label{eq:q_update}
+% 	Q(s_t, a_t) = (1-\alpha_t) Q(s_t, a_t) + \alpha_t [R_{t+1} + \gamma max_a Q(s_{t+1}, a_{t+1})]
+% \end{equation}
+%
+% At each time step the Q-value for the previous state-action pair, $s_t$ and $a_t$, is updated at a learning rate, $\alpha_t$, by the sum of the received reward, $R_t$, and the discounted Q-value of the next state, $s_{t+1}$, maximized by selecting action $a_{t+1}$. The simplest way to represent the action-value function is to tabulate the values, with each row representing a possible state, and each column representing a possible action. By initializing the table randomly and then letting the agent act according to its policy, $\pi$, the agent can learn the Q-values for each element of the table.
+%
+% A simple policy that can be used for Q-Learning is the $\epsilon$-greedy policy. With this policy, the agent will either take the action that maximizes its current action-value function, $Q_t$, given its current state, or take a random action from the set of possible actions. The possibility that the agent takes a random action is determined by a the value $\epsilon$, where $0<\epsilon<1$. A higher value of $\epsilon$ means the agent explores more, while a lower value of $\epsilon$ means the agent exploits its current knowledge more. If $\epsilon=0$ the agent will always try to maximize its current action-value function and will not try new actions, which could potentially result in higher rewards. If $\epsilon=1$ the agent will always act randomly, which is useless in most cases. There is always a trade-off between exploitation and exploration, but certain tricks can be used to maximize reward, such as decreasing the exploration rate, $\epsilon$, as time passes and the agent learns to take optimal actions.
+%
+% \subsubsection{Function Approximation}
+% Although tabulated Q-Learning is simple, many problems cannot be described in a discrete way. Function approximation provides a way to model the action-values in a continuous state space using a learned function. Most commonly, the Q function is represented by a neural network that takes the state as its input, and outputs a vector of the action-values for each action in the discrete action space. The update function shown in equation \ref{eq:func_approx} is similar to the tabular case, but uses the difference between the current Q-value and the next reward plus the next Q-value as the error term in the backpropagation for the neural network.
+%
+% \begin{equation}
+% \begin{split}
+% 	\label{eq:func_approx}
+% 	& E = [R_{t+1} + \gamma max_a Q(s_{t+1}, a_{t+1})] - Q(s_t,a_t) \\
+% 	& w_{i,j} \leftarrow w_{i,j} + \alpha_t \frac{\di E}{\di w_{i,j}}
+% \end{split}
+% \end{equation}
 
 
 \section{Proposed Solutions}
@@ -303,7 +301,8 @@ The following criteria considered in choosing an appropriate solution are chosen
 Due to the nature of the problem, training time and data are difficult to acquire. Without a simulation, data and training can only be collected and run in real time. Therefore, the solution should require minimal training time and data, or be able to make use of a simulation.
 
 \subsection{Neural Network Methods}
-The three neural network methods proposed in this section make use of the PID control loop described in Figure \ref{fig:servo_system}. A neural network that outputs the PID gains, $K_p$, $K_i$, and $K_d$ is added to the control loop. The idea is that the neural network will learn to output appropriate gains for any situation, such that the system has the best response time and error for that situation. The rotation and flexion servos will use separately trained neural networks to output gains for their respective PID controllers. In this section the rotation servo will be used to explain the method, but the same method can be applied to both rotation and flexion servos.
+The three neural network methods proposed in this section make use of the PID control loop described in Figure \ref{fig:servo_system}. A neural network that outputs the PID gains, $K_p$, $K_i$, and $K_d$ is added to the control loop. The neural network takes the error between the setpoint and the current angle of the servo, the current angle  of the servo, and the velocity of the servo. The goal is to train the neural network so that it will output appropriate gains for any situation, such that the system has the best response time and error for that situation. The rotation and flexion servos will use separately trained neural networks to output gains for their respective PID controllers. In this section the rotation servo will be used to explain the method, but the same method can be applied to both rotation and flexion servos.
+
 \subsubsection{PID Auto-Tuning, Trained Model-Free using Backpropagation}\label{sec:model_free_backprop}
 Since no labels exist for the PID gains at the output of the neural network (it is unknown what the gains should be in any given situation) the error term used to train the neural network, $E$, must be the squared error between the servo angle, $\phi(t)$ and the setpoint, $r(t)$ as shown in equation \ref{eq:model_free_error}. To train the neural network, this error must be backpropagated through the servo and the PID controller to the neural network output, $\bf{m}$. Performing the chain rule on the partial derivative of $E$ with respect to $\bf{m}$ yields \ref{eq:backprop_servo}. This partial derivative can then be backpropagated through the neural network to train the weights.
 
@@ -322,7 +321,7 @@ Since no labels exist for the PID gains at the output of the neural network (it 
 	\end{bmatrix}
 \end{equation}
 
-Here, $phi$ is the rotation servo angle, $u$ is the control signal from the PID controller defined in equation \ref{eq:pid}, and $K_p$, $K_i$, and $K_d$ are the PID gains. The solutions to the individual partial derivatives are shown in equation \ref{eq:partial_derivs}
+Here, $\phi$ is the rotation servo angle, $u$ is the control signal from the PID controller defined in equation \ref{eq:pid}, and $K_p$, $K_i$, and $K_d$ are the PID gains. The solutions to the individual partial derivatives are shown in equation \ref{eq:partial_derivs}
 
 \begin{equation}
 \begin{split}
@@ -335,10 +334,21 @@ Here, $phi$ is the rotation servo angle, $u$ is the control signal from the PID 
 \end{split}
 \end{equation}
 
-Since the time domain function of the servo, $\phi(t)$ is not known, it is not possible to solve for $\frac{\di \phi}{\di u}$. To address this problem, a second neural network that mimics the servo can be used in the backpropagation rather than the actual servo. This allows the error to be backpropagated through the neural network, through the PID controller and to the PID neural network. Figure \ref{fig:pid_model_free_backprop} is the control loop block diagram with the added PID neural network and servo neural network. The servo neural network will be trained on the actual response of the servo. By treating the input to the servo as the input to the neural network, and the output of the servo as the labels for training, backpropagation can be performed to train the servo neural network on dataset of inputs and outputs given by the actual servo. Once trained, the neural network can be implemented into the control loop to train the PID neural network.
+Since the time domain function of the servo, $\phi(t)$ is not known, it is not possible to solve for $\frac{\di \phi}{\di u}$. To address this problem, a second neural network that mimics the servo is used to output the servo angle rather than the actual servo. This allows the error to be backpropagated through the neural network, through the PID controller and to the PID neural network. Figure \ref{fig:pid_model_free_backprop} is the control loop block diagram with the added PID neural network and servo neural network. The servo neural network will be trained on the actual response of the servo. By treating the input to the servo as the input to the neural network, and the output of the servo as the labels for training, backpropagation can be performed to train the servo neural network on a dataset of inputs and outputs given by the actual servo. Figure \ref{fig:servo_nn_training} demonstrates the training process for the servo neural network. Once trained, the servo neural network is implemented into the control loop to train the PID neural network using backpropagation. After training the PID neural network, the PID neural network is implemented into the actual system.
 
-\subsubsection{PID Auto-Tuning, Trained Model-Free using the Levenberg-Marquardt Algorithm}
-Rather than using backpropagation to train the weights of the PID neural network, the Levenberg-Marquardt algorithm is used to train the PID neural network as described in section \ref{sec:levenberg}. Equation \ref{eq:levenberg_model_free} is used to solve for the weight adjustments, $\sigma$, using the difference between the servo angle, $\phi$, and the setpoint, $r$, as the error term. A servo neural network, trained the same way as described in sec\ref{sec:model_free_backprop} is used to simulate the servo response to small weight changes needed to calculate the jacobian of the servo outlined in section \ref{sec:numerical_jacobian}.
+\begin{figure}[H]
+\centering \includegraphics[width=0.8\columnwidth]{pid_model_free_backprop.png}
+\caption{\label{fig:pid_model_free_backprop}Block diagram of the training process for the PID neural network using the servo neural network to mimic the actual servo output.}
+\end{figure}
+
+\begin{figure}[H]
+\centering \includegraphics[width=0.8\columnwidth]{servo_nn_training.png}
+\caption{\label{fig:servo_nn_training}Block diagram of the training process for the servo neural network.}
+\end{figure}
+
+
+\subsubsection{PID Auto-Tuning, Trained Model-Free using the Levenberg-Marquardt Algorithm}\label{sec:levenberg_model_free}
+Rather than using backpropagation to train the weights of the PID neural network, the Levenberg-Marquardt algorithm is used to train the PID neural network as described in section \ref{sec:levenberg}. Equation \ref{eq:levenberg_model_free} is used to solve for the weight adjustments, $\sigma$, using the difference between the servo angle, $\phi$, and the setpoint, $r$, as the error term. A servo neural network, trained the same way as described in \ref{sec:model_free_backprop} is used to simulate the servo response to small weight changes needed to calculate the jacobian of the servo outlined in section \ref{sec:numerical_jacobian}.
 
 \begin{equation}
 	\label{eq:levenberg_model_free}
@@ -346,25 +356,65 @@ Rather than using backpropagation to train the weights of the PID neural network
 \end{equation}
 
 \subsubsection{PID Auto-Tuning, Trained with a Model using the Levenberg-Marquardt Algorithm}
+Similar to section \ref{sec:levenberg_model_free} this method uses the Levenberg-Marquardt algorithm the train the PID neural network. However, when numerically calculating the jacobian, rather than using a neural network to simulate the servo response to small weight changes, a mathematical model of the servo is used. Equation \ref{eq:servo_tf} is the simplified transfer function of the servo, assuming the electrical dynamics of the servo are much faster than the mechanical dynamics \cite{m.r.o.a.maximo}.
 
 
-PID auto-tuning trained model-free, using backpropagation
-PID auto-tuning trained model-free, using the Levenberg-Marquardt algorithm
-PID auto-tuning trained with a model, using the Levenberg-Marquardt algorithm
+\begin{equation}
+	\label{eq:servo_tf}
+	\frac{Y(s)}{U(s)} = \frac{N \eta K_t (K_d s^2 + K_p s + K_i)}{R (J_l + J_m N^2 \eta)s^3 + (b_m N^2 \eta R + \frac{K_t N^2 \eta}{K_\omega} + N \eta K_t K_d)s^2 + N \eta K_t K_p s + N \eta K_t K_i}
+\end{equation}
+
+Here, $Y(s)$ is the laplace transform of the servo angle, $U(s)$ is the laplace transform of the input signal.
+The MX-28AT servo contains an internal PID controller with internal gains. Since the servo is controlled in ticks rather than radians, the gains must be converted so that they can be used in the transfer function which is in radians. Equation \ref{eq:internal_gains_conversion} shows the conversion process.
+
+\begin{equation}
+\begin{split}
+	\label{eq:internal_gains_conversion}
+	& K_p = \frac{P}{8} \frac{2048 V_s}{511 \pi} \\
+	& K_i = \frac{1000 I}{2048} \frac{2048 V_s}{511 \pi} \\
+	& K_d = \frac{4 D}{1000} \frac{2048 V_s}{511 \pi} \\
+\end{split}
+\end{equation}
+
+Here, $V_s$ is the source voltage which is $12 V$, and $P$, $I$, and $D$ are gains set by the user, which are $P=32$, $I=0$, and $D=0$ by default. The user manual for the MX-28AT also states that the gains set by the user must be converted to get their values in ticks, hence the multiplication by $\frac{1}{8}$, $\frac{1000}{2048}$ and $\frac{4}{1000}$ for $P$, $I$, and $D$ respectively \cite{robotis}.
+
+The load inertia, $J_l$, depends on the servo. For the rotation servo the inertia is estimated as the inertia of a rectangular prism, which represents the flexion servo, rotating on its center axis, and a point mass, which represents the gripper, whose position above the axis of rotation depends on the angle of the flexion servo. For the flexion servo the inertia is estimated as the inertia of a rectangular prism, which represents the gripper, rotating around an axis offset from its center by half its length and the length of the bracket attaching the gripper to the flexion servo. The inertia calculations are shown in equation \ref{eq:inertia}.
 
 
-\subsection{Reinforcement Learning Methods}
-Tabular Q-learning
-Q-learning with function approximation
+
+The other parameters for equation \ref{eq:servo_tf} are described in table \ref{tab:servo_params}.
+
+\begin{table}[H]
+	\begin{center}
+		\caption{Parameters for the MX-28AT servo model \cite{m.r.o.a.maximo}}
+        \label{tab:servo_params}
+        \begin{tabular}{l|l|l}
+        Parameter & Symbol & Value \\
+        \hline
+				Motor resistance & $R$ & $8.3 \Omega$ \\
+				Motor gear ratio & $N$ & $193$ \\
+				Motor gear efficiency & $\eta$ & $0.836$ \\
+				Speed constant & $K_{\omega}$ & $93.1 rad/V$ \\
+				Torque constant & $K_t$ & $0.0107 Nm/A$ \\
+				Motor inertia & $J_m$ & $8.68 \times 10^{-8} kgm^2$ \\
+				Friction & $b_m$ & $8.87 \times 10^{-8} Nms$ \\
+        \end{tabular}
+	\end{center}
+\end{table}
+
+
+% \subsection{Reinforcement Learning Methods}
+% Tabular Q-learning
+% Q-learning with function approximation
 
 
 \section{Solution Evaluation}
-\subsection{Q-learning - Tabular}
-Tabular control wasn't granular enough to enable precise control of the servo
-Even with a minimized state space (only using the IMU angle), it was still difficult to visit all states and learn making it unreliable.
-\subsection{Q-learning - Function Approximation}
-Not enough data to train the neural network, difficult to visit all states, no simulation (must train real-time which is very slow especially if testing different hyperparameters)
-Deadly triad (bootstrapping, function approximation and off-policy learning) - not guaranteed to converge
+% \subsection{Q-learning - Tabular}
+% Tabular control wasn't granular enough to enable precise control of the servo
+% Even with a minimized state space (only using the IMU angle), it was still difficult to visit all states and learn making it unreliable.
+% \subsection{Q-learning - Function Approximation}
+% Not enough data to train the neural network, difficult to visit all states, no simulation (must train real-time which is very slow especially if testing different hyperparameters)
+% Deadly triad (bootstrapping, function approximation and off-policy learning) - not guaranteed to converge
 
 \subsection{PID Auto-Tuning - Trained with Model, using Levenberg-Marquardt}
 Requires a simulation for the servo, however the level of sophistication for the simulation does not need to be extremely high as in an RL setting. Uses a PID controller (so not starting from scratch) which makes it more reliable, as the PID controller on its own will achieve the objective of automatic levelling to a certain level. Therefore a simple simulation can be a starting point.
@@ -453,6 +503,13 @@ D. J. A. Brenneis, "Automatic Levelling of a Prosthetic Wrist", \textit{Universi
 \bibitem{r.s.sutton}
 R. S. Sutton and A. G. Barto, "Introduction to reinforcement learning", \textit{Cambridge: MIT
 Press}, second edition, 2018.
+
+\bibitem{m.r.o.a.maximo}
+M. R. O. A. Maximo, C. H. C. Ribeiro and R. J. M. Afonso, "Modeling of a position servo used in robotics applications", \textit{Autonomous Computational Systems Lab (LAB-SCA) and Electronic Engineering Division, Computer Science Division, Aeronautics
+Institute of Technology, Pra¸ca Marechal Eduardo Gomes}, 2017.
+
+\bibitem{robotis}
+"Robotis e-manual", \textit{Robotis}, 2019. [Online]. Available: http://emanual.robotis.com/docs/en/dxl/mx/mx-28/. [Accessed: 16-Jul-2019].
 % \bibitem{whatisacodec}
 % "What is a CODEC? And why is it an important component of videoconferencing?", \textit{Jwhornvideoconference.com}, 2018. [Online]. Available: http://www.jwhornvideoconference.com/what-is-a-codec-and-why-is-it-an-important-component-of-videoconferencing. [Accessed: 16- Aug- 2018].
 %
